--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -393,7 +393,7 @@
       </g>
     </svg>
 
-    <span>{{ title }} app is running!</span>
+    <span>{{ title }}!</span>
 
     <svg
       id="rocket-smoke"
@@ -417,35 +417,3 @@
 
 
   <p appRenew></p>
-
-  <div class="badge" *appSettings="['hasReports', 'hasAdvancedReports']">
-    <h4>This user has access to reports</h4>
-    <ul>
-      <li><a>Reports</a></li>
-      <li><a>Advanced Reports</a></li>
-    </ul>
-  </div>
-
-
-  <div class="badge2">
-    <input type="checkbox" id="hasReports"  value="hasReports" (change)="ssnChanged($event)">
-    <label for="hasReports"> Show me SSN</label><br>
-
-    <input type="checkbox" id="hasReports"  value="hasCharts" (change)="dobChanged($event)">
-    <label for="hasReports"> Show me DOB</label><br>
-  </div>
-  <div class="badge" *appFilters="filters">
-    <ul>
-      <li *ngFor="let f of filters">{{f}}</li>
-    </ul>
-    <h4>This user has access to secure filters</h4>
-  </div>
-</div>
-
-
-
-
-
-
-
-
