--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,10 @@
 .renew {
+  margin-top:30px;
   background-color: red;
   padding: 10px;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color: #fff;
+  font-weight: 700;
 }
 .badge{
   border: 1px green solid;
