--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -413,33 +413,10 @@
     </svg>
   </div>
 
-  <!-- Kate contenet -->
+
+  <p *ngIf="flag"class='renew'>{{date}}</p>
 
 
-  <p appRenew></p>
-
-  <div class="badge" *appSettings="['hasReports', 'hasAdvancedReports']">
-    <h4>This user has access to reports</h4>
-    <ul>
-      <li><a>Reports</a></li>
-      <li><a>Advanced Reports</a></li>
-    </ul>
-  </div>
-
-
-  <div class="badge2">
-    <input type="checkbox" id="hasReports"  value="hasReports" (change)="ssnChanged($event)">
-    <label for="hasReports"> Show me SSN</label><br>
-
-    <input type="checkbox" id="hasReports"  value="hasCharts" (change)="dobChanged($event)">
-    <label for="hasReports"> Show me DOB</label><br>
-  </div>
-  <div class="badge" *appFilters="filters">
-    <ul>
-      <li *ngFor="let f of filters">{{f}}</li>
-    </ul>
-    <h4>This user has access to secure filters</h4>
-  </div>
 </div>
 
 
