demo for example 2

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -413,8 +413,6 @@
     </svg>
   </div>
 
-  <!-- Kate contenet -->
-
 
   <div class="badge" *appSettings="['hasReports', 'hasAdvancedReports']">
     <h4>This user has access to reports</h4>
@@ -424,7 +422,7 @@
     </ul>
   </div>
 
-  <div class="badge" *appSettings="[ 'hasAdvancedReports']">
+  <div class="badge" *appSettings="[ 'hasAdmin','hasAdvancedReports']">
     <h4>This user has access to Adminreports</h4>
     <ul>
       <li><a>Admin Reports</a></li>
